--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "koa-bodyparser": "^4.2.1",
     "koa-router": "^7.4.0",
     "koa-static": "^5.0.0",
+    "koa": "^2.7.0",
     "lodash": "^4.17.11",
     "module-alias": "^2.2.0",
     "mysql2": "^1.6.5",
