--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
   "_moduleAliases": {
     "@root": ".",
     "@models": "app/models",
-    "@validator": "app/validators/validator.js"
+    "@validator": "app/validators/validator.js",
+    "@core": "core",
+    "@middlewares": "middlewares"
   }
 }
